Fix Railway deployment configuration

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,45 @@
+# Multi-Agent Academic Advising System
+# All dependencies for Railway deployment
+
+# =============================================================================
+# Core Framework
+# =============================================================================
+fastapi>=0.109.0
+uvicorn[standard]>=0.27.0
+pydantic>=2.5.0
+pydantic-settings>=2.1.0
+
+# =============================================================================
+# Database
+# =============================================================================
+motor>=3.3.0
+pymongo>=4.6.0
+certifi>=2023.0.0
+
+# =============================================================================
+# Authentication
+# =============================================================================
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+python-multipart>=0.0.6
+
+# =============================================================================
+# LangChain & AI
+# =============================================================================
 langchain>=0.1.0
 langchain-openai>=0.0.5
 langchain-community>=0.0.20
 langgraph>=0.0.20
-chromadb>=0.4.0
 openai>=1.0.0
+
+# =============================================================================
+# Vector Database
+# =============================================================================
+chromadb>=0.4.0
+
+# =============================================================================
+# Utilities
+# =============================================================================
 python-dotenv>=1.0.0
-pydantic>=2.0.0
+httpx>=0.26.0
+email-validator>=2.1.0
