Fix Railway deployment: use Dockerfile builder

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,4 +1,5 @@
 # Nixpacks configuration for Railway deployment
+# Note: This project uses Dockerfile instead (see railway.json)
 
 [phases.setup]
 nixPkgs = ["python311"]
@@ -7,4 +8,4 @@ nixPkgs = ["python311"]
 cmds = ["pip install -r requirements.txt"]
 
 [start]
-cmd = "cd backend && uvicorn server:app --host 0.0.0.0 --port ${PORT:-8000}"
+cmd = "uvicorn backend.server:app --host 0.0.0.0 --port ${PORT:-8000}"
